nix-lexer/src/snapshots/nix_lexer__test__fixture@basic.nix.snap
---
source: nix-lexer/src/lib.rs
expression: "5 + 3\n"
input_file: nix-lexer/fixtures/basic.nix
---
[
    Int(
        "5",
    ),
    Plus,
    Int(
        "3",
    ),
]
