nix-lexer/src/snapshots/nix_lexer__test__fixture@dollar_string.nix.snap
---
source: nix-lexer/src/lib.rs
expression: "let x = \"$\"; in x\n"
input_file: nix-lexer/fixtures/dollar_string.nix
---
[
    Let,
    Ident(
        "x",
    ),
    Equals,
    String(
        [
            Content(
                "$",
            ),
        ],
    ),
    Semicolon,
    In,
    Ident(
        "x",
    ),
]
