nix-lexer/src/snapshots/nix_lexer__test__fixture@string_complex_interpolation.nix.snap
---
source: nix-lexer/src/lib.rs
expression: "''\n  \"${\n    replaceStrings [ \"\\n\" \"\t\" ''\"'' \"\\\\\" ] [ \"\\\\n\" \"\\\\t\" ''\\\"'' \"\\\\\\\\\" ] v\n  }\"''\n"
input_file: nix-lexer/fixtures/string_complex_interpolation.nix
---
[
    MultilineString(
        [
            Content(
                "\n  \"",
            ),
            Interpolation(
                [
                    Ident(
                        "replaceStrings",
                    ),
                    SquareBracketOpen,
                    String(
                        [
                            Content(
                                "\\n",
                            ),
                        ],
                    ),
                    String(
                        [
                            Content(
                                "\t",
                            ),
                        ],
                    ),
                    MultilineString(
                        [
                            Content(
                                "\"",
                            ),
                        ],
                    ),
                    String(
                        [
                            Content(
                                "\\\\",
                            ),
                            Content(
                                "",
                            ),
                        ],
                    ),
                    SquareBracketClose,
                    SquareBracketOpen,
                    String(
                        [
                            Content(
                                "\\\\",
                            ),
                            Content(
                                "n",
                            ),
                        ],
                    ),
                    String(
                        [
                            Content(
                                "\\\\",
                            ),
                            Content(
                                "t",
                            ),
                        ],
                    ),
                    MultilineString(
                        [
                            Content(
                                "\\\"",
                            ),
                        ],
                    ),
                    String(
                        [
                            Content(
                                "\\\\",
                            ),
                            Content(
                                "\\\\",
                            ),
                            Content(
                                "",
                            ),
                        ],
                    ),
                    SquareBracketClose,
                    Ident(
                        "v",
                    ),
                ],
            ),
            Content(
                "\"",
            ),
        ],
    ),
]
