nix-lexer/src/snapshots/nix_lexer__test__fixture@string_escaped_backslash.nix.snap
---
source: nix-lexer/src/lib.rs
expression: "\"\\\\\"\n"
input_file: nix-lexer/fixtures/string_escaped_backslash.nix
---
[
    String(
        [
            Content(
                "\\\\",
            ),
            Content(
                "",
            ),
        ],
    ),
]
