nix-lexer/src/snapshots/nix_lexer__test__fixture@string_immediate_interpolation.nix.snap
---
source: nix-lexer/src/lib.rs
expression: "\"${hello}\"\n"
input_file: nix-lexer/fixtures/string_immediate_interpolation.nix
---
[
    String(
        [
            Content(
                "",
            ),
            Interpolation(
                [
                    Ident(
                        "hello",
                    ),
                ],
            ),
            Content(
                "",
            ),
        ],
    ),
]
